Fix wall toolbar display on mobile

--- a/shared/components/pages/ActivationsPage.less
+++ b/shared/components/pages/ActivationsPage.less
@@ -18,9 +18,11 @@
         @media @phone {
             width: 100%;
             overflow: auto;
+            height: 135px;
 
             .mdl-tabs {
                 width: 500px;
+                flex-grow: 1;
             }
 
             &::-webkit-scrollbar {
@@ -69,6 +71,17 @@
         max-width: 1300px;
         box-sizing: border-box;
         justify-content: center;
+
+        @media @phone {
+            padding: 0;
+            flex-direction: column;
+        }
+
+        .mdl-tabs__tab-bar {
+            @media @phone {
+                flex-wrap: wrap;
+            }
+        }
     }
 }
 
@@ -88,6 +101,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media @phone {
+        margin-top: 200px;
+    }
 }
 
 .ActivationsPage__empty-state {
@@ -150,7 +167,7 @@
     }
 
     .ActivationsPage__content {
-        margin-top: 60px;
+        margin-top: 135px;
         margin-bottom: 60px;
     }
 }
@@ -204,6 +221,10 @@
     }
 
     &::-ms-expand { display: none; }
+
+    @media @phone {
+        align-self: center;
+    }
 }
 
 .ActivationsPage__loading-next-spinner-container {
